<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="submitTen">10%</string>
    <string name="submitFifteen">15%</string>
    <string name="submitTwenty">20%</string>
    <string name="enter_prompt">Enter any amount</string>
    <string name="tipis_label">"Tip is: "</string>
    <string name="tip_label">$0.00</string>

</resources>
