<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

<Button
        android:id="@+id/btnFifteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onSubmit"
        android:tag="fifteen"
        android:enabled="false"   
        android:text="@string/submitFifteen" />

    <Button
        android:id="@+id/btnTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/btnFifteen"
        android:onClick="onSubmit"
        android:tag="ten"
        android:enabled="false"
        android:text="@string/submitTen" />

    <Button
        android:id="@+id/btnTwenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/btnFifteen"
        android:onClick="onSubmit"
        android:tag="twenty"
        android:enabled="false"
        android:text="@string/submitTwenty" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnFifteen"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:hint="@string/enter_prompt" >
        
    </EditText>

    <TextView
        android:id="@+id/tvTipIsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTen"
        android:layout_below="@+id/btnFifteen"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="51dp"
        android:text="@string/tipis_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipIsLabel"
        android:layout_alignBottom="@+id/tvTipIsLabel"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/tvTipIsLabel"
        android:text="@string/tip_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
